[package]
name = "ahref"
description = "Extract 'a' tags from html page"
authors = ["tenqz"]
version = "0.2.1"
edition = "2021"
rust-version = "1.72.0"
repository = "https://github.com/tenqz/ahref"
readme = "README.md"
keywords = ["html", "scrapper", "link", "a", "href"]
license = "MIT"


[lib]
name = "ahref"
path = "src/lib.rs"

[[bin]]
name = "ahref"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.5"
